<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World,Digital_BIT!</string>
    <string name="app_name">北理校园通</string>
    <string name="main_home">新闻</string>
    <string name="main_bus">校车</string>
    <string name="main_directory">电话</string>
    <string name="main_edit">编写</string>
    <string name="main_conference">会议</string>
    <string name="more">更多</string>
    <string name="news_school">新闻头条</string>
    <string name="news_deans">教务处新闻</string>
    <string name="news_notice">通知公告</string>
    <string name="meeting_lastweek">上周会议</string>
    <string name="meeting_thisweek">本周会议</string>
    <string name="meeting_nextweek">下周会议</string>
    <string name="searchMenu">查询</string>
    <string name="searchLabel">查询</string>
    <string name="searchHint">请输入查询内容</string>
    <string name="http_ask_error">网络连接异常</string>
    <string name="meeting_now">最新会议</string>
    <string name="meeting_last">上周会议</string>
    <string name="meeting_last_two">上两周会议</string>
    <string name="meeting_place">开会地点：</string>
    <string name="meeting_date">开会时间：</string>
    <string name="meeting_name">会议名称：</string>
    <string name="meeting_day_of_week">星期：</string>
    <string name="meeting_people">参加人员：</string>
    <string name="meeting_remarks">备注：</string>
    <string name="month_cn">月</string>
    <string name="day_cn">日</string>
    <string name="http_send_sucess">发送成功</string>
    <string name="http_send_fail">发送失败</string>
    <string name="news_is_loading">数据加载中，请稍后...</string>
    <string name="news_empty">抱歉，您的网络链接异常</string>
    <string name="news_nomore">无更多新闻</string>
    <string name="news_formore">点击查看更多</string>
    <string name="news_refresh">正在加载...</string>
    <string name="refresh">更新中…</string>
    <string name="news_pubtime">发布于：</string>
    <string name="day_of_week">星期</string>
    <string name="year_cn">年</string>
    <string name="num1_cn">一</string>
    <string name="num2_cn">二</string>
    <string name="num3_cn">三</string>
    <string name="num4_cn">四</string>
    <string name="num5_cn">五</string>
    <string name="num6_cn">六</string>
    <string name="phone_search_edittext">请输入单位名称，在当前范围内查询</string>
    <string name="phone_search">电话查询</string>
    <string name="route_navigation">路线导航</string>
    <string name="insert_comment_success">评论完成</string>
    <string name="warning_comment_empty">您还没写东西哟</string>
    <string name="next_step">下一步</string>
    <string name="submit">提交</string>

    <string-array name="num_week">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string-array name="date_type">
        <item>节假日</item>
        <item>周末</item>
        <item>周五</item>
        <item>工作日</item>
    </string-array>
    <string-array name="bus_place">
        <item>良乡</item>
        <item>中关村</item>
        <item>西三旗</item>
        <item>回龙观</item>
        <item>城铁良乡大学城北站</item>
    </string-array>

    <!-- 所有可订阅的新闻类别 -->
    <string-array name="newsName">
        <item>新闻快讯</item>
        <item>教务处通知</item>
        <item>校方通知</item>
        <item>招聘就业</item>
        <item>本科招生</item>
        <item>研究生招生</item>
        <item>学工事务</item>
        <item>讲座预告</item>
        <item>教育教学</item>
        <item>学术研究</item>
        <item>网络通告</item>
        <item>行政办公</item>
        <item>人事公告</item>
        <item>外事交流</item>
        <item>生活琐事</item>
    </string-array>

    <!-- 所有新闻类别 -->
    <string-array name="newsId">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="college">
        <item>宇航</item>
        <item>机电</item>
        <item>机械与车辆</item>
        <item>光电</item>
        <item>信息与电子</item>
        <item>自动化</item>
        <item>计算机</item>
        <item>就业指导中心</item>
        <item>软件</item>
        <item>材料</item>
        <item>化工与环境</item>
        <item>生命</item>
        <item>数学</item>
        <item>物理</item>
        <item>化学</item>
        <item>管理与经济</item>
        <item>人文与社会科学</item>
        <item>法学</item>
        <item>外国语</item>
        <item>设计与艺术</item>
    </string-array>

    <!-- 招生信息 -->
    <string name="str_admission_news">招生信息</string>
    <string name="str_college_info">学院纵览</string>
    <string name="str_admission_plan">招生计划</string>
    <string name="str_admission_score">历年分数</string>
    <string name="str_admission_aq">问题咨询</string>
    <string name="str_admission_searching">请稍候\n正在为您查询</string>
    <string name="str_admission_searching_not_result">没有查到相关数据</string>
    <string name="str_admission_search_empty_warning">点击右上角按钮\n选择需要查询的内容</string>
    <string name="str_admission_major">专业名称</string>
    <string name="str_admission_type">科类</string>
    <string name="str_admission_lasts">学制</string>
    <string name="str_admission_level">层次</string>
    <string name="str_admission_tuition">学费</string>
    <string name="str_admission_number">计划数</string>
    <string name="str_admission_high">最高分</string>
    <string name="str_admission_low">最低分</string>

    <string-array name="array_college_name">
        <item>徐特立学院</item>
        <item>宇航学院</item>
        <item>机电学院</item>
        <item>机械与车辆学院</item>
        <item>光电学院</item>
        <item>信息与电子学院</item>
        <item>自动化学院</item>
        <item>计算机学院</item>
        <item>软件学院</item>
        <item>材料学院</item>
        <item>化工与环境学院</item>
        <item>生命学院</item>
        <item>数学与统计学院</item>
        <item>物理学院</item>
        <item>化学学院</item>
        <item>管理与经济学院</item>
        <item>人文与社会科学学院</item>
        <item>法学院</item>
        <item>外国语学院</item>
        <item>设计与艺术学院</item>
        <item>基础教育学院</item>
        <item>国际教育学院</item>
    </string-array>
    <string-array name="array_college_file">
        <item>xuteli</item>
        <item>yuhang</item>
        <item>jidian</item>
        <item>jixiecheliang</item>
        <item>guangdian</item>
        <item>xinxidianzi</item>
        <item>zidonghua</item>
        <item>jisuanji</item>
        <item>ruanjian</item>
        <item>cailiao</item>
        <item>huagonghuanjing</item>
        <item>shengming</item>
        <item>shuxue</item>
        <item>wuli</item>
        <item>huaxue</item>
        <item>guanli</item>
        <item>renwenshehui</item>
        <item>faxue</item>
        <item>waiguoyu</item>
        <item>yishusheji</item>
        <item>jichujiaoyu</item>
        <item>guojijiaoyu</item>
    </string-array>
    <string-array name="array_year">
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
    </string-array>
    <string-array name="array_province">
        <item>北京</item>
        <item>天津</item>
        <item>河北</item>
        <item>山西</item>
        <item>内蒙古</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>上海</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>广东</item>
        <item>广西</item>
        <item>海南</item>
        <item>重庆</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>西藏</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>宁夏</item>
        <item>新疆</item>
    </string-array>
    <string-array name="array_type">
        <item>理工</item>
        <item>文史</item>
    </string-array>

    <!-- 学院名称 -->

    <string name="college_warning">抱歉，该学院未开通此功能！</string>
    <string name="downLoad_ask">是否需要下载：</string>
    <string name="downLoad_yes">下载</string>
    <string name="downLoad_and_open">下载并打开</string>
    <string name="downLoad_cancle">取消</string>
    <string name="downLoad_no_sd">抱歉，您的SD卡出现异常。</string>
    <string name="downLoad_wait">请稍候</string>
    <string name="downLoad_now">文件正在下载中....</string>
    <string name="downLoad_not_open">此文件无法打开</string>
    <string name="downLoad_timeout">抱歉，网络访问超时</string>
    <string name="downLoad_finish">文件已经下载完成。已保存在</string>

    <!-- PostInformation内容 -->

    <string name="search_post_empty">没有找到活动海报哟~</string>
    <string name="search_post_location_empty">在北理一个不为人知的地方</string>
    <string name="search_post_time_empty">在一个不为人知的时候</string>
    <string name="search_post_host_empty">北理校内一个神秘的组织</string>
    <string name="search_post_title_empty">这是一个神秘的活动</string>
    <string name="search_post_phone_empty">某个未知的电话</string>
    <string name="search_post_content_empty">没有详细内容哦</string>

    <!-- 社团公告 -->
    <string name="tabstaggeredgridactivity_action_bar_title">社团公告</string>
    <string name="tabstaggeredgridactivity_tab_post">公告</string>
    <string name="tabstaggeredgridactivity_tab_hobby_group">社团</string>

    <!-- 公告详情 -->
    <string name="postdetailactivity_action_bar_title">公告详情</string>
    <string name="about_us_content">北理校园通于2012年上线，为北京理工大学师生提供校园新闻、校内电话、会议及校车的查询服务。我们致力于提供更智能的便携的数字校园生活方式，使您不用开电脑，足不出户，尽享北理数字生活。</string>
    <string name="dev_person">项目开发：刁月华、曹立洲、申桐、赵力锐、程妍、崔桐、洪小婷、任天天、杨瑞、董佳琪、田堃、黄潜、王天童、吴芳雪</string>

    <!-- 二手市场 -->
    <string name="second_hand_publish">发布信息</string>
    <string name="second_hand_market">二手市场</string>
    <string name="detail">详情</string>

    <!-- 北理知道 -->
    <string name="bitknow_discribe_question">描述问题</string>
    <string name="bitknow_add_topic">添加标签</string>
    <string name="bitknow_tip_string">描述你的问题</string>
    <string name="bitknow_my_topic">添加</string>
    <string name="bitknow_topic_tip">添加自己的标签</string>
    <string name="bitknow_search">请输入要查询的内容</string>

    <!-- 个人管理相关 -->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_code">验证码</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_pwd">密码</string>
    <string name="hint_confirm">确认密码</string>
    <string name="hint_username">用户名</string>
    <string name="btn_code">获取验证码</string>
    <string name="btn_register">注册</string>

    <!-- 北理知道 -->
    <string name="bit_konw">二手市场</string>

</resources>