<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/userphone"
        android:layout_width="250dip"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/register_bar"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:maxLength="15"
        android:paddingLeft="5dip"
        android:singleLine="true"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_code"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/register_bar"
            android:hint="@string/hint_code"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="5dip"
            android:singleLine="true"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_code"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_photo_style"
            android:text="@string/btn_code"
            android:textColor="#ffffff" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="250dip"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_bar"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:maxLength="20"
        android:paddingLeft="10dip"
        android:singleLine="true"
        android:textSize="18sp" />
    
    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dip"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_bar"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:paddingLeft="10dip"
        android:singleLine="true"
        android:textSize="18sp" />
    
    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dip"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_bar"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:maxLength="12"
        android:paddingLeft="10dip"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_confirm"
        android:layout_width="250dip"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_bar"
        android:hint="@string/hint_confirm"
        android:inputType="textPassword"
        android:maxLength="12"
        android:paddingLeft="10dip"
        android:singleLine="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="245dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_photo_style"
        android:text="@string/btn_register"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>