<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_post"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_time_gray"
                android:gravity="center_vertical"
                android:text="@string/search_post_time_empty" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_time_gray"
                android:gravity="center_vertical"
                android:text="@string/search_post_location_empty" />

            <TextView
                android:id="@+id/tv_host"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_time_gray"
                android:gravity="center_vertical"
                android:text="@string/search_post_host_empty" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_time_gray"
                android:gravity="center_vertical"
                android:text="@string/search_post_phone_empty" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_time_gray"
                android:gravity="center_vertical"
                android:text="@string/search_post_content_empty" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/linBottom"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/comment_footer"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/pbtnComment"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:scaleType="center"
            android:src="@drawable/comment_list" />

        <ImageView
            android:id="@+id/pbtnShare"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:src="@drawable/comment_share" />

        <TextView
            android:id="@+id/ptxtComment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_toLeftOf="@+id/pbtnShare"
            android:layout_toRightOf="@+id/pbtnComment"
            android:background="#CCCCCC"
            android:gravity="center|left"
            android:hint="写评论..."
            android:paddingLeft="4dp"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>