<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:id="@+id/tv_admission_plan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_admission_plan"
            android:gravity="center"
            android:text="@string/str_admission_plan"
            android:textColor="#454545"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_admission_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_admission_score"
            android:gravity="center"
            android:text="@string/str_admission_score"
            android:textColor="#454545"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_admission_college_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_admission_college_info"
            android:gravity="center"
            android:text="@string/str_college_info"
            android:textColor="#454545"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_admission_aq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_admission_aq"
            android:gravity="center"
            android:text="@string/str_admission_aq"
            android:textColor="#454545"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="#D4D4D4" />

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/admission_refresh_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/common_bg"
        android:cacheColorHint="#00000000"
        android:divider="#00000000"
        android:dividerHeight="0.7dp"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:overScrollMode="never"
        android:smoothScrollbar="true" />

</LinearLayout>